# tools

./: .bashrc  .gitignore  .i3config  .tmux.conf  .vimrc  Cargo.toml  Cross.toml  Dockerfile  README.md  disable.sh  enable.sh  get_invites.py  go.mod  install.sh  makelinks.sh  user_env.yaml  user_env_rollback.yaml
.devcontainer/: devcontainer.json  docker-compose.yml
.github/: release-drafter.yml
.github/workflows/: ci.yml  codeql-analysis.yml  hello_workflow.yml  node.js.yml  publish-release.yml  release-drafter.yml  sample.yml  super-linter.yml
.vim/: .netrwhist
.vim/after/colors/: desert.vim  evening.vim
consolidate-teams/: README.md  consolidate-teams.js  package-lock.json  package.json  properties.json
create-repos-from-template/: README.md  go.mod  go.sum  main.go
delete-repositories/: README.md  delete-repos.js  example.csv  package-lock.json  package.json  test.js
generate-jwt-key/: README.md  generate-jwt-key.js  package-lock.json  package.json
get-issues/: main.js
pygit-auth-refresh/: Pipfile  README.md  config.sample.py  main.py
remove-protections/: README.md  go.mod  go.sum  main.go
search-org-repos/: package.json  results.json  search-org-repos.js
src/: main.rs  utility.rs
src/commands/: consolidate_teams.rs  delete_repositories.rs  enable_actions.rs  get_app_token.rs  get_issues.rs  mod.rs  transfer_repositories.rs
transfer-organization/: README.md  package-lock.json  package.json  repo  transfer-organization.js
update-branch-protection/: README.md  package-lock.json  properties.json  updateBranchProtection.js
