[package]
name = "tools"
version = "0.1.0"
edition = "2021"
authors = ["Chris McIntosh <chocrates@github.com>"]
description = "Suite of tools used for GitHub Organizaton/Repository management"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "3.2.8", features = ["derive"] }
