[package]
name = "github-tools"
version = "0.1.0"
edition = "2021"
authors = ["Chris McIntosh <chocrates@github.com>"]
description = "Suite of tools used for GitHub Organizaton/Repository management"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "3.2.8", features = ["derive"] }
cross = "0.2.4"
csv = "1.1.6"
octocrab = "0.16.0"
reqwest = "0.11.11"
serde = { version = "1.0.138", features = ["derive"] }
serde_json = "1.0.82"
tokio = { version = "1.20.4", features = ["full"] }

[profile.release]
lto = "thin"
